--- a/.project
+++ b/.project
@@ -18,18 +18,7 @@
 		<link>
 			<name>sprites</name>
 			<type>2</type>
-			<location>/Users/vanle/Desktop/JavaGame/C::/eclipse workspace/JavaGame/src/sprites</location>
+			<location>C:/eclipse workspace/JavaGame/src/sprites</location>
 		</link>
 	</linkedResources>
-	<filteredResources>
-		<filter>
-			<id>1678130618925</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
-			</matcher>
-		</filter>
-	</filteredResources>
 </projectDescription>
